--- a/css/estilobase.css
+++ b/css/estilobase.css
@@ -7,3 +7,15 @@ body {
     width: 100%;
     background-color: #ffffff
 }
+.titulo{
+    position: absolute;
+    top: 5px;
+    left: 40%;
+    width: auto;
+    z-index: 1000;
+    background-color: rgb(255,255,255,0.9);
+    padding: 10px;
+    font-size: 21px;
+    color: #333333;
+    border-radius: 5px;
+}
